@startuml

title __DESIGN's Class Diagram__\n

  namespace com.itbird.design {
    class com.itbird.design.APP {
        {static} - mContext : Context
        {static} + getInstance()
        + onCreate()
    }
  }
  

  namespace com.itbird.design {
    class com.itbird.design.MainActivity {
        + testAdapterPatterm()
        + testBuilderPatterm()
        + testChainPatterm()
        + testDecoratorPatterm()
        + testFactoryPatterm()
        + testFlyWeightPatterm()
        + testIteratorPatterm()
        + testObserverPatterm()
        + testPrinciple()
        + testPrototypePatterm()
        + testProxyPatterm()
        + testSingletomPatterm()
        + testStrategyPatterm()
        + testTemplatePatterm()
        # onCreate()
        - startActivity()
    }
  }
  

  com.itbird.design.APP -up-|> android.app.Application
  com.itbird.design.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
